scripts/nullness/annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8.txt
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/items/OpenedChest.java:6: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/items/ClosedChest.java:6: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/items/OpenedChest.java:25: error: cannot find symbol
    @Initializer @Override
     ^
  symbol:   class Initializer
  location: class OpenedChest
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/items/ClosedChest.java:18: error: cannot find symbol
    @Initializer @Override
     ^
  symbol:   class Initializer
  location: class ClosedChest
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
